@@ -8,6 +8,7 @@ Overview of changes in lightdm 1.1.3
     * Add Lock D-Bus method that locks the seat and provides a hint to the
       greeter to be in lock mode.
     * Automatically lock sessions when switching away from them
+    * Add a has-messages property to liblightdm
 
 Overview of changes in lightdm 1.1.2
 
